--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,34 @@
     <string name="voting_deadline_title">Voting deadline:</string>
     <string name="voting_deadline">4/11/2023</string>
     <string name="vote_title">Vote</string>
+    <string name="add_photo">Upload photo</string>
+    <string name="photo_title">Photo title</string>
+    <string name="contest_input_hint">Contest\n</string>
+    <string name="select_image_input">Select image...</string>
+    <string name="upload_photo_button">Upload photo</string>
+    <string name="validate_photo_button">Validate</string>
+    <string name="delete_photo_button">Delete</string>
+    <string name="username_edit_text_error">User already exists</string>
+    <string name="password_edit_text_error">Must contain 8 characters, a (.) or (,) and a number (1-9)</string>
+    <string name="username_empty_error">Username is mandatory</string>
+    <string name="mail_empty_error">E-mail is mandatory</string>
+    <string name="mail_not_valid_error">E-mail is not valid</string>
+    <string name="password_empty_error">Password is mandatory</string>
+    <string name="terms_not_accepted_error">You must accept terms and conditions</string>
+    <string name="notification_error_title">ERROR</string>
+    <string name="notification_info_title">INFO</string>
+    <string name="notification_succeeded_title">SUCCEEDED</string>
+    <string name="notification_user_created_body">User created. Logging in...</string>
+    <string name="notification_user_successfully_auth_body">User authenticated correctly</string>
+    <string name="notification_error_authenticating_user_body">Invalid credentials</string>
+    <string name="notification_error_creating_user_body">API error received creating user</string>
+    <string name="notification_unexpected_error_body">Unexpected error received</string>
+    <string name="notification_error_getting_photos">Error getting photos</string>
+    <string name="notification_error_getting_contest">Error getting contest info</string>
+    <string name="notification_error_getting_contest_deadline">Error getting contest deadline</string>
+    <string name="notification_error_getting_voting_deadline">Error getting voting deadline</string>
+    <string name="notification_error_getting_contest_name">Error getting voting name</string>
+    <string name="notification_error_voting">Error when voting</string>
+
+
 </resources>
