--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="upload_photo_button">Upload photo</string>
     <string name="validate_photo_button">Validate</string>
     <string name="delete_photo_button">Delete</string>
+    <string name="edit_user_button">Edit</string>
     <string name="username_edit_text_error">User already exists</string>
     <string name="password_edit_text_error">Must contain 8 characters, a (.) or (,) and a number (1-9)</string>
     <string name="username_empty_error">Username is mandatory</string>
@@ -34,6 +35,7 @@
     <string name="notification_user_created_body">User created. Logging in...</string>
     <string name="notification_user_successfully_auth_body">User authenticated correctly</string>
     <string name="notification_error_authenticating_user_body">Invalid credentials</string>
+    <string name="notification_error_updating_user_body">Error updating user information. Please check the data is valid.</string>
     <string name="notification_error_creating_user_body">API error received creating user</string>
     <string name="notification_unexpected_error_body">Unexpected error received</string>
     <string name="notification_error_getting_photos">Error getting photos</string>
@@ -42,6 +44,25 @@
     <string name="notification_error_getting_voting_deadline">Error getting voting deadline</string>
     <string name="notification_error_getting_contest_name">Error getting voting name</string>
     <string name="notification_error_voting">Error when voting</string>
+    <string name="notification_error_getting_users">Error getting users</string>
+    <string name="manage_group_button">Manage groups</string>
+    <string name="manage_group_title">Manage existing groups or create new ones</string>
+    <string name="group_name_input_hint">IE: operators</string>
+    <string name="create_new_group_button">Create new group</string>
+    <string name="update_group_button">Update group</string>
+    <string name="delete_group_button">Delete group</string>
+    <string name="dialog_cancel_button">Cancel</string>
+    <string name="dialog_exit_button">Exit</string>
+
+    <string name="edit_user_title">Manage user data and information</string>
+    <string name="username_hint">Username</string>
+    <string name="email_hint">E-mail</string>
+    <string name="save_user_button">Save</string>
+    <string name="delete_user_button">Delete</string>
+    <string name="manage_roles_button">Manage user roles</string>
+    <string name="reset_password_button">Reset password</string>
+
+
 
 
 </resources>
