--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Photo Rally</string>
     <string name="title_activity_contest">ContestActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Admin Dashboard</string>
@@ -77,6 +77,31 @@
     <string name="notification_error_procesing_photos">Error processing photos</string>
     <string name="notification_ok_uploading_photo">Photo uploaded</string>
     <string name="notification_error_getting_role_id">Error getting role id</string>
+    <string name="number_of_votes_subtitle">"Number of votes: "</string>
+    <string name="start_date_hint">Start Date</string>
+    <string name="end_date_hint">End Date</string>
+    <string name="voting_start_date_hint">Voting Start Date</string>
+    <string name="voting_end_date_hint">Voting End Date</string>
+    <string name="maximun_number_of_photos_per_user_hint">Maximun number of photos per user</string>
+    <string name="users_title">Users</string>
+    <string name="submitted_photos_title">Submitted Photos</string>
+    <string name="by_subtitle">By</string>
+    <string name="app_description">Join the photography rally and capture stunning moments!</string>
+    <string name="get_started_button_text">Get Started</string>
+    <string name="log_in">Log In</string>
+    <string name="log_in_subtitle">Log in to upload photos and vote!</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="terms_and_conditions">I agree with Terms and Conditions</string>
+    <string name="register_link_text">Need to register? Click here</string>
+    <string name="create_account">Create Account</string>
+    <string name="create_your_account_subtitle">Create your account to start participating</string>
+    <string name="your_email_address">Your email address</string>
+    <string name="enter_your_password">Enter your password</string>
+    <string name="register">Register now</string>
+    <string name="log_in_link">Already registered? Log In</string>
+    <string name="role">Role</string>
+    <string name="action">Action</string>
 
 
 </resources>
