--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,8 @@
     <string name="notification_error_retrieving_roles_body">Error retrieving roles</string>
     <string name="notification_ok_deleting_user_body">User deleted successfully</string>
     <string name="notification_error_getting_description">Error getting description</string>
+    <string name="notification_error_updating_roles">Error updating roles. Maybe you are not admin</string>
+    <string name="notification_ok_updating_roles">Role assigned correctly</string>
 
     <string name="edit_contest_title">Manage contest data and information</string>
     <string name="contest_name_hint">Contest name</string>
@@ -102,6 +104,7 @@
     <string name="log_in_link">Already registered? Log In</string>
     <string name="role">Role</string>
     <string name="action">Action</string>
+    <string name="assign">Assign</string>
 
 
 </resources>
